corrected css locally on mac. wondering if there is a build difference between by mac and pc creating distortion

--- a/src/App.css
+++ b/src/App.css
@@ -417,7 +417,7 @@ h2, td {
 
 .App-header {
   grid-area: header;
-  /* font-size: 3rem; */
+  font-size: 3rem;
   color: gray;
   top: 0px;
   display: block;
@@ -437,7 +437,7 @@ h2, td {
 }
 
 .socialBtns {
-  /* height: 100%; */
+  height: 2rem;
   padding: 5rem;
   letter-spacing: 3rem;
 }
@@ -451,26 +451,28 @@ h2, td {
   position: relative;
   grid-area: main;
   color: black;
-  /* grid-gap: 1vw; */
-  grid-template-columns: auto 1fr auto;
+  grid-gap: 50px;
+  grid-template-columns: 2fr 4fr 4fr;
 }
 
 .profilePic{
-  /* margin-right: 2%; */
-  /* margin-left: 2%; */
-  /* width: 100%; */
+  margin-right: 2%;
+  margin-left: 2%;
+  width: 100%;
 }
 
 .myBio{
-  /* padding: 2%; */
-  /* font-size: 4rem; */
+  padding: 2%;
+  font-size: 4rem;
   text-align: justify;
+  /* width: 50%; */
 
 }
 
 .experience{
   text-align: start;
-  /* font-size: 4rem; */
+  font-size: 4rem;
+  /* width: 40%; */
 }
 
 th, tr {
@@ -512,7 +514,7 @@ div.myApps {
 }
 
 .appImg {
-  min-height: 100%;
+  height: 80%;
 }
 
 @media screen and (max-device-width : 600px){
@@ -521,64 +523,51 @@ div.myApps {
     tab-size: 0;
   }
 
-  body{
-    /* display: inline-flex;
-    flex-direction: column; */
-
-  }
-
-  .App, html, body{
+  .App{
     display: flex;
     flex-direction: column;
-    /* margin: 5%; */
-    width: 100%;
+    padding: 5%;
+    max-width: 90%;
   }
 
   .App-header{
-    width: 100%;
     font-size: 1rem;
     letter-spacing: 0;
     display: block;
+    margin-bottom: 20px;
     
   }
 
   .App-social{
-    
-    width: 100%;
     height: 20px;
-    margin-bottom: 2%;
+    margin-bottom: 20px;
 
   }
 
   .App-bio{
-    width: 100%;
     display: flex;
     flex-direction: column;
 
   }
 
-  .profilePic{
-    margin: 0;
-  }
-
   .myBio{
     font-size: 1rem;
-    max-width: 100%;
     margin: 0 5%;
   }
 
   table{
     font-size: 1rem;
-    width: 100%;
+    /* width: 100%; */
     margin: 0;
-    margin-bottom: 2%;
+    margin: 20px 0;
     border-spacing: .5rem 0;
   }
 
   img.socialBtns, .appImg, .profilePic{
-    width: 80%;
+    width: 50%;
     height: auto;
     padding: 0;
+    margin: 0;
     align-self: center;
   }
 
